// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t0] route is initialized then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 1.vision (1.vision.stone)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t1] 1.vision artifact is created and pass attempted then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ 1.vision.md
      └─ judges
          └─ j1: npx rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✗
              ├─ judge: .route/1.vision.guard.judge.i1p1.89a3b47031ddeb8c23151d71f85717bdb3adfed2e3c6224d3fe7c6d059cbf474.79af67282f021ee213087dfc0cd59b76b6fc4f2fa230045b79504ff592f988f9.j1.md
              └─ reason: wait for human approval
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t2] 1.vision is approved by human then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 1.vision
   └─ approval = granted
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t3] 1.vision pass is reattempted after approval then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ 1.vision.md
      └─ judges
          └─ j1: npx rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✓
              └─ judge: .route/1.vision.guard.judge.i1p1.89a3b47031ddeb8c23151d71f85717bdb3adfed2e3c6224d3fe7c6d059cbf474.9344949395a1fec3b64b9504524cb70f309a6460bf804270ccc38491a2863eba.j1.md
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t4] next stone is requested after 1.vision then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 2.research (2.research.stone)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t5] 2.research pass attempted without artifact then: stdout has good vibes 1`] = `""`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t6] 2.research artifact created and pass attempted then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 2.research
   └─ passage = allowed (unguarded)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t7] next stone is requested after 2.research then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 3.blueprint (3.blueprint.stone)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t8.5] 3.blueprint self-review is promised then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 3.blueprint
   └─ passage = progressed (self-review 1/1 promised)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t8] 3.blueprint artifact created and pass attempted then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 3.blueprint
   └─ passage = blocked (self-review required)

🔍 check yo'self
   ├─ review.self 1/1
   │  ├─ slug = design-complete
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ promise its done? if so, run
   │  └─ rhx route.stone.set --stone 3.blueprint --as promised --that design-complete
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  have you completed the full api design?
   │  │    are all endpoints, request/response shapes, and error cases documented?
   │  │
   │  └─
   │
   └─ promise its done? if so, run
      └─ rhx route.stone.set --stone 3.blueprint --as promised --that design-complete
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t9.5] 3.blueprint review set to pass and pass reattempted then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 3.blueprint
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ 3.blueprint.md
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-review.sh
      │       └─ · cached
      └─ judges
          ├─ j1: npx rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 2
          │   └─ · cached
          └─ j2: npx rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✗
              ├─ judge: .route/3.blueprint.guard.judge.i2p2.fd29f621e589e44175adf2201fa80bf72797235b994355101b4f50e08e4ebe44.70d50298a823e186ed1641bc32518956a7362338a59b85ded9b26acfe38f816c.j2.md
              └─ reason: wait for human approval
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t9] 3.blueprint pass reattempted after promise then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 3.blueprint
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ 3.blueprint.md
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-review.sh
      │       ├─ finished [TIME] ✓
      │       ├─ review: .route/3.blueprint.guard.review.i1.fd29f621e589e44175adf2201fa80bf72797235b994355101b4f50e08e4ebe44.r1.md
      │       └─ 1 blocker 🔴
      └─ judges
          ├─ j1: npx rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 2
          │   ├─ finished [TIME] ✓
          │   └─ judge: .route/3.blueprint.guard.judge.i1p1.fd29f621e589e44175adf2201fa80bf72797235b994355101b4f50e08e4ebe44.70d50298a823e186ed1641bc32518956a7362338a59b85ded9b26acfe38f816c.j1.md
          └─ j2: npx rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✗
              ├─ judge: .route/3.blueprint.guard.judge.i1p1.fd29f621e589e44175adf2201fa80bf72797235b994355101b4f50e08e4ebe44.70d50298a823e186ed1641bc32518956a7362338a59b85ded9b26acfe38f816c.j2.md
              └─ reason: wait for human approval
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t10] 3.blueprint approved and pass reattempted then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 3.blueprint
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ 3.blueprint.md
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-review.sh
      │       └─ · cached
      └─ judges
          ├─ j1: npx rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 2
          │   ├─ finished [TIME] ✓
          │   └─ judge: .route/3.blueprint.guard.judge.i2p1.fd29f621e589e44175adf2201fa80bf72797235b994355101b4f50e08e4ebe44.100ff96e8539bfa8572353fd104e8abb3dfc186c10f0e02d6acd5189f1b53b5b.j1.md
          └─ j2: npx rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✓
              └─ judge: .route/3.blueprint.guard.judge.i2p1.fd29f621e589e44175adf2201fa80bf72797235b994355101b4f50e08e4ebe44.100ff96e8539bfa8572353fd104e8abb3dfc186c10f0e02d6acd5189f1b53b5b.j2.md
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t11] next stone is requested after 3.blueprint then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ stone = 5.execute (5.execute.stone)
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t12] 5.execute artifact created and pass attempted then: stdout has good vibes 1`] = `
"🦉 so you're saying there's a chance?

🗿 route.stone.set
   ├─ stone = 5.execute
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ weather.ts
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-review.sh
      │       ├─ finished [TIME] ✓
      │       └─ review: .route/5.execute.guard.review.i1.e5c031c5923de2dd7ebc77d84ac1c222cfdb9d3143fa8c0bc27ed9d821ce74e3.r1.md
      └─ judges
          └─ j1: npx rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✓
              └─ judge: .route/5.execute.guard.judge.i1p1.e5c031c5923de2dd7ebc77d84ac1c222cfdb9d3143fa8c0bc27ed9d821ce74e3.a98dc386edcd8c99a3d132b7fc4a6366285cfa5e55717c43387c45b76d6c0800.j1.md
"
`;

exports[`driver.route.journey.acceptance given: [journey] weather api route when: [t13] next stone is requested after all stones passed then: stdout has good vibes 1`] = `
"🦉 and then?

🗿 route.stone.get
   ├─ query = @next-one
   └─ status = all stones passed
"
`;
